feat: update resume for 2026

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -20,7 +20,7 @@
       "Description": "革新的で最先端のテクノロジーを実験することに情熱を持っています。現在はフルスタック開発者、そしてテックリードとして働きながら、機械学習に携わっています。",
       "Say hello!": "👋 お問い合わせ",
       "Download CV": "履歴書",
-      "CV file": "umut_karakulak-resume_ja.pdf"
+      "CV file": "umut_karakulak-cv_2026_ja.pdf"
     },
     "About": "プロフィール",
     "Languages": "言語",
@@ -85,9 +85,9 @@
       "Engineering Manager": "Engineering Manager (BOTCHAN AI Team)",
       "Wevnal engineering manager work description": "10名以上のエンジニアを直接マネジメント。定期的な1on1やメンタリング、フィードバックを通じて成長を支援。エンジニア採用・面接・評価を担当し、チームルールや開発プラクティスを整備。AI駆動開発を推進しつつ、ビジネスチームと密に連携。",
       "Tech Lead AICALL": "Tech Lead (Botchan AICALL)",
-      "Wevnal botchan AICALL work description": "Realtime APIを利用した通話型AIエージェント「Botchan AICALL」のTech Lead。0→1フェーズから開発に関わり、システム設計、ハンズオン実装、コードレビューを担当。コーディングルールや開発環境の改善、DevOpsを整備し、セキュリティ・信頼性・オブザーバビリティを担当。",
+      "Wevnal botchan AICALL work description": "Realtime APIを利用した通話型AIエージェント「Botchan AICALL」のテックリード。0→1フェーズから開発に関わり、システム設計、ハンズオン実装、コードレビューを担当。コーディングルールや開発環境の改善、DevOpsを整備し、セキュリティ・信頼性・オブザーバビリティを担当。",
       "Tech Lead AI": "Tech Lead (Botchan AI)",
-      "Wevnal botchan AI work description": "RAGベースのチャットボット「Botchan AI」のTech Lead。システムアーキテクチャおよびインフラを担当し、技術的負債の削減とハンズオン開発を推進。要件定義やコードレビューを行い、ビジネスチームおよび顧客の技術窓口として、セキュリティ、障害対応、信頼性、オブザーバビリティを担当。",
+      "Wevnal botchan AI work description": "RAGベースのチャットボット「Botchan AI」のテックリード。システムアーキテクチャおよびインフラを担当し、技術的負債の削減とハンズオン開発を推進。要件定義やコードレビューを行い、ビジネスチームおよび顧客の技術窓口として、セキュリティ、障害対応、信頼性、オブザーバビリティを担当。",
       "Wevnal responsibilities": "開発、プロトタイピング、システムアーキテクチャ、インフラ、DevOps、テスト、QA、セキュリティ、コードレビュー、インシデント対応、信頼性、オブザーバビリティ、顧客サポート、採用、メンターシップ、1on1、チーム間連携、ビジネスサポート",
       "DUNKSOFT Co.,Ltd": "株式会社ダンクソフト",
       "Full Stack Engineer": "フルスタックエンジニア",
